# edc-data-manager

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGES.rst  MANIFEST.in  README.md  README.rst  manage.py  pyproject.toml  requirements.tests.txt  requirements.txt  runtests.py  setup.cfg  setup.py  tox.ini
.github/workflows/: build.yml
crypto_fields/: user-aes-local.key  user-aes-restricted.key  user-rsa-local-private.pem  user-rsa-local-public.pem  user-rsa-restricted-private.pem  user-rsa-restricted-public.pem  user-salt-local.key  user-salt-restricted.key
data_manager_app/: admin.py  admin_site.py  apps.py  consents.py  lab_profiles.py  models.py  navbars.py  reference_configs.py  reference_model_configs.py  sites.py  urls.py  views.py  visit_schedule.py  visit_schedules.py
edc_data_manager/: __init__.py  action_items.py  admin_site.py  apps.py  auth_objects.py  auths.py  baker_recipes.py  choices.py  constants.py  data_manager.py  data_manager_modeladmin_mixin.py  forms.py  get_data_queries.py  get_longitudinal_value.py  manage.py  modeladmin_mixins.py  models.py  mommy_recipes.py  navbar_item.py  populate_data_dictionary.py  post_migrate_signals.py  settings.py  site_data_manager.py  tasks.py  urls.py  utils.py  wsgi.py
edc_data_manager/admin/: __init__.py  action_item_admin.py  actions.py  autocomplete_admin.py  data_dictionary_admin.py  data_manager_query_admin.py  data_query_admin.py  issue_admin.py  query_admin.py  query_rule_admin.py  validation_errors_admin.py  visit_schedule_admin.py
tests/: test_settings.py
(+144 files in other folders)
