[metadata]
name = edc-data-manager
version = attr: _version
author = Erik van Widenfelt
author_email = ew2789@gmail.com
url = https://github.com/clinicedc/edc-data-manager
license = GPL license, see LICENSE
description = Data manager administrative models and classes for clinicedc/edc projects
long_description = file: README.rst
long_description_content_type = text/x-rst
keywords = django Edc, data management, CRF, clinicedc, clinical trials
classifiers=
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 4.2
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Operating System :: OS Independent
    Programming Language :: Python :: 3.11
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)


[options]
python_requires = >=3.11
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    arrow
    celery

[options.extras_require]
test =
    django_webtest

[options.packages.find]
exclude =
    examples*
    tools*
    docs*
    bin*
    edc_data_manager.tests*

[flake8]
ignore = E226,W503,E203
max-line-length = 95
max-complexity = 11
exclude = */migrations/*,.tox,.git,__pycache__,build,dist,.eggs
per-file-ignores = __init__.py: F401
